<resources>
    <string name="app_name">CampusJagd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Menu items-->
    <string name="menu_main">Hauptmenü</string>
    <string name="menu_challenge_list">Challenge erstellen</string>
    <string name="menu_roomlist">Alle POIs</string>
    <string name="menu_stats">Status</string>
    <string name="menu_challenge_transfer">Challenge erhalten</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_highscore">High Score</string>

    <!-- Highscore Fragment -->
    <string name="highscore_header_name">Name:</string>
    <string name="highscore_header_points">Punkte:</string>
    <string name="highscore_header_online">Online Highscore:</string>

    <!-- Menu toolbar header-->
    <string name="stats_header">Gefundene POIs</string>
    <string name="create_new_room_header">POI erstellen</string>
    <string name="create_new_challenge_header">Challenge erstellen</string>
    <string name="waiting_for_ptp_header">Challenge erstellen</string>

    <string name="waiting_for_peer_to_peer">Auf Peer to Peer Verbindung warten</string>

    <!-- Settings fragment-->
    <string name="username">Nutzername</string>
    <string name="new_username_hint">z.B. Arnold123</string>
    <string name="username_info_text">Nutzernamen dürfen nur einmal vorkommen. Wir müssen deshalb prüfen ob der neu gewählte Nutzername schon vorhanden ist.</string>
    <string name="settings_check_username">Nutzernamen prüfen</string>
    <string name="settings_check_username_success">Nutzername wurde erfolgreich geändert.</string>
    <string name="settings_check_username_failure">Das hat leider nicht funktioniert. Der Nutzername ist schon weg :-/</string>

    <string name="create_challenge_name">Challenge Name</string>
    <string name="challenge_list_delete_button_pressed">Sicher dass du die Challenge löschen möchtest?</string>
    <string name="challenge_list_redo_button_pressed">Sicher dass du die Challenge nochmal als Challenge auf Zeit neustarten möchtest?\n\nAlle Räume der Challenge werden wieder als nicht gefunden markiert.</string>
    <string name="challenge_list_redo_button_pressed_is_already_time_challenge">Sicher, dass du die Zeitchallenge aufhören möchtest? \n\nDeine bisher in der Challenge gefundenen Räume bleiben erhalten.</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="create_room_name">POI-Name</string>
    <string name="create_room_name_hint">z.B. IZ 160</string>
    <string name="create_room_points">Punkte</string>
    <string name="create_room_points_hint">z.B. 10</string>
    <string name="create_room_button_name">Setze GPS</string>
    <string name="create_room_parse_point_error">Fehler beim Lesen der Punkte.</string>
    <string name="create_room_no_name_error">Kein Name wurde eingegeben</string>
    <string name="create_room_no_gps_error">Keine GPS Position gesetzt</string>

    <string name="no_permissions_granted">Ohne die GPS Daten kann die App nicht richtig funktionieren :-/</string>
    <string name="ask_to_save_qr">QR-Code speichern?</string>
    <string name="cancel">Abbrechen</string>
    <string name="popup_start_QR">QR-Code scannen</string>
    <string name="popup_start_Location">Position checken</string>
    <string name="location_check_no_room_found">Es wurde leider kein neuer POI in deiner Nähe gefunden :-/</string>
    <string name="location_check_one_room_found">Du hast POI %1$s gefunden.</string>
    <string name="location_check_more_rooms_found">Du hast die POIs %1$s gefunden.</string>

    <!-- Barcode Strings-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="barcode_success_toast">QR-Code gefunden</string>
    <string name="title_activity_maps">Map</string>

    <!-- NFC -->
    <string name="send_challenge">Challenge senden</string>
    <string name="receive_challenge">Challenge erhalten</string>
    <string name="alertbox_title">Info</string>
    <string name="alertbox_message">Bitte aktivieren Sie NFC und Android Beam</string>
    <string name="alertbox_positive">Aktivieren</string>
    <string name="alertbox_negative">Schließen</string>
    <string name="nfc_not_available">NFC is nicht verfügbar</string>
    <string name="mime_type">application/de.tubs.campusjagd</string>

</resources>
