<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_reply_black_24dp"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_challenge_list"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_challenge_list" />
        <item
            android:id="@+id/nav_roomlist"
            android:icon="@drawable/ic_room_black_24dp"
            android:title="@string/menu_roomlist" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_challenge_transfer"
            android:icon="@drawable/ic_import_export_black_24dp"
            android:title="@string/menu_challenge_transfer" />
        <item
            android:id="@+id/nav_highscore"
            android:icon="@drawable/ic_cake_black_24dp"
            android:title="@string/menu_highscore" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu_settings" />
    </group>

</menu>
